[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
ethereum-types = "0.11.0"
evm = "0.27.0"
fc-consensus = { version = "2.0.0-dev", path = "../consensus" }
fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-consensus = { version = "1.0.0", path = "../../primitives/consensus" }
fp-rpc = { version = "2.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage"}
sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-transaction-pool = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-storage = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-blockchain = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-service = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-client-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-rpc = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-network = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-evm = { version = "5.0.0-dev", path = "../../frame/evm" }
fp-evm = { version = "2.0.0-dev", path = "../../primitives/evm" }
pallet-ethereum = { version = "3.0.0-dev", path = "../../frame/ethereum" }
ethereum = { version = "0.7.1", features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
rlp = "0.5"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"

[features]
rpc_binary_search_estimate = []
